Spacing fixes + 'Tools' section placeholder

--- a/css/agile.css
+++ b/css/agile.css
@@ -74,6 +74,7 @@ strong {
 .about {
   background: #222;
   color: #fff;
+  margin-top: 2em;
   padding-bottom: 2em;
   padding-top: 2em;
  }
